# snapy

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  configure.h.in  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cd.yml  ci.yml
cmake/: eigen.cmake  kintera.cmake  parameters.cmake
cmake/macros/: macro_setup_cuda_test.cmake  macro_setup_problem.cmake  macro_setup_test.cmake
examples/: CMakeLists.txt  aerosol_output_data.txt  amars-ck.yaml  amars.py  amars_rt.py  bryan.py  bryan.yaml  combine_rules  earth_moist.cpp  earth_moist.py  example_crm.cpp  example_earth.cpp  example_earth.yaml  example_jupiter.yaml  example_shock.cpp  example_shock.yaml  example_sonora_2020.yaml  example_straka.cpp  example_straka.yaml  explosion-2.py  explosion.py  jupiter.yaml  rfm.atm  robert.py  robert.yaml  shallow_xy.py  shock.cpp  shock.py  shock.yaml  shock_tube.py  straka.cpp  straka.py  straka.yaml  test_crater.py  test_shock.cpp  test_straka.cpp  topo_example.py
patches/: 01.eigen.patch
python/: __init__.py
src/: CMakeLists.txt  add_arg.h  constants.h  index.h  index_range.hpp  loops.cuh  registry.cpp  registry.hpp  snap.cpp  snap.h
src/bc/: CMakeLists.txt  bc.hpp  bc_dispatch.cpp  bc_dispatch.cu  bc_formatter.hpp  bc_func.hpp  boundary_condition.cpp  boundary_condition.hpp  exchange.cpp  flip_zero_impl.h  internal_boundary.cpp  internal_boundary.hpp  outflow.cpp  periodic.cpp  rectify_solid.cpp  reflect.cpp  solid.cpp
src/column/: decom.cpp  decom.hpp
src/coord/: cartesian.cpp  coord_formatter.hpp  coordgen.cpp  coordgen.hpp  coordinate.cpp  coordinate.hpp  gnomonic_equiangle.cpp
src/eos/: eos_dispatch.cpp  eos_dispatch.cpp_  eos_dispatch.cu  eos_dispatch.cu_  eos_dispatch.hpp  eos_formatter.hpp  equation_of_state.cpp  equation_of_state.hpp  ideal_gas.cpp  ideal_gas_impl.h  ideal_moist.cpp  ideal_moist.cpp_  ideal_moist.hpp  ideal_moist_impl.h  moist_mixture.cpp  moist_mixture.hpp  shallow_water.cpp
src/forcing/: const_gravity.cpp  coriolis.cpp  diffusion.cpp  forcing.hpp  forcing_formatter.hpp  forcing_options.cpp
src/hydro/: hydro.cpp  hydro.hpp  hydro_formatter.hpp  hydro_options.cpp  primitive_projector.cpp  primitive_projector.hpp
src/implicit/: alloc_eigen.cpp  alloc_eigen.cu  alloc_eigen.h  implicit_dispatch.cpp  implicit_dispatch.cu  implicit_dispatch.hpp  implicit_formatter.hpp  tridiag_thomas_impl.h  vertical_implicit.cpp  vertical_implicit.hpp  vic_forward.cpp_
src/input/: parameter_input.cpp
src/interface/: athena_arrays.hpp  init_from_tensor.hpp  stride_iterator.hpp
src/intg/: integrator.cpp  integrator.hpp  intg_dispatch.cpp  intg_dispatch.cu  intg_formatter.hpp
src/kintera/: kintera_formatter.hpp  reaction.cpp  reaction.hpp
src/math/: lubksb.h  luminv.h
src/mesh/: find_neighbor.cpp  initialize.cpp  mesh.cpp  mesh.hpp  mesh_formatter.hpp  mesh_functions.cpp  mesh_functions.hpp  meshblock.cpp  meshblock.hpp  meshblock_options.cpp  oct_tree.cpp  oct_tree.hpp
src/output/: combine_blocks.cpp  hdf5.cpp  load_diag_output_data.cpp  load_hydro_output_data.cpp  load_scalar_output_data.cpp  load_user_output_data.cpp  netcdf.cpp  output.cpp  output.hpp  output_formats.hpp  output_formatter.hpp  output_type.cpp  output_type.hpp  output_utils.cpp  output_utils.hpp  pnetcdf.cpp_  readme.md  slice_output_data.cpp_  sum_output_data.cpp
src/parallel/serialize/: vector_stream.h
src/recon/: cp3.cpp  cp5.cpp  interp_cp3_impl.h  interp_impl.cuh  interp_impl.h  interp_simple.hpp  interp_weno3_impl.cuh  interp_weno5_impl.cuh  interpolation.cpp_vec_  interpolation.hpp  plm.cpp  ppm.cpp  recon_dispatch.cpp  recon_dispatch.cu  recon_dispatch.hpp  recon_formatter.hpp  reconstruct.cpp  reconstruct.hpp  weno3.cpp  weno5.cpp
src/riemann/: hllc.cpp  hllc_impl.h  lmars.cpp  lmars_impl.h  riemann_dispatch.cpp  riemann_dispatch.cu  riemann_formatter.hpp  riemann_solver.cpp  riemann_solver.hpp  roe.cpp  shallow_roe.cpp
src/scalar/: scalar.cpp  scalar.hpp  scalar_formatter.hpp  scalar_options.cpp
src/sedimentation/: sed_hydro.cpp  sed_options.cpp  sed_vel.cpp  sedimentation.hpp
src/thermo/: cal_dlnT_dlnP_impl.h  condensation.cpp  condensation.hpp  condensation_impl.h  condensation_singular_impl.h  nucleation.cpp  nucleation.hpp  thermo_dispatch.cpp_  thermo_dispatch.cu_  thermo_formatter.hpp  thermodynamics.cpp  thermodynamics.hpp  thermodynamics_impl.h
src/thermo/vapors/: ammonia_vapors.hpp  ammonium_hydrosulfide_vapors.hpp  water_vapors.hpp
src/utils/: cuda_utils.cu  flip_zero.cpp  flip_zero.h  print_matrix.h  utils_dispatch.cu
src/utils/z.junk/: flip_zero_one.cpp  flip_zero_one_v2.cpp  flip_zero_one_v3.cpp
src/z.junk/: load_user_output_data.cpp
tests/: CMakeLists.txt  aa  test_async.cpp  test_eos.cpp  test_fvm_coordinates.cpp  test_fvm_integration.cpp  test_fvm_outflow.cpp  test_fvm_output.cpp  test_fvm_reflect.cpp  test_fvm_typesystem.cpp  test_implicit.cpp  test_internal_boundary.cpp  test_iterator.cu  test_mesh.cpp  test_oct_tree.cpp  test_ppm.cpp  test_projection.cpp  test_reconstruct.cpp  test_rectify.cpp  test_riemann.cpp  test_thermodynamics.cpp  test_thomas_solver.cu  test_weno.cpp
(+34 files in other folders)
