[metadata]
name = snapy
version = 0.10.4
description = Finite Volume Method library
long_description = file: doc/README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/chengcli/libsnap
author = Zoey Hu
author_email = zoey.zyhu@gmail.com
keywords = radiative transfer
license = GPL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://github.com/chengcli/libsnap/
    Source = https://github.com/chengcli/libsnap/src
    Tracker = https://github.com/chengcli/libsnap/issues

[options]
zip_safe = False
include_package_data = False

install_requires =
  numpy>=1.12.0,<2
  torch==2.3.0

python_requires = >=3.8

# These options exclude data from the wheel file but not from the sdist
[options.exclude_package_data]
libsnap = *.cpp, *.cu, *.h
